Add comprehensive deployment files and guides
- DEPLOYMENT_GUIDE.md: Complete deployment instructions for Render, Vercel, AWS, Docker
- DEPLOYMENT_CHECKLIST.md: Pre-deployment verification checklist
- Dockerfile: Multi-stage Docker build for production
- docker-compose.yml: Local development with Ollama
- deploy.sh: Automated deployment script
- render.yaml: Render platform configuration
- vercel.json: Vercel platform configuration
- Updated .env.example files with current configuration
- Updated .gitignore with comprehensive patterns

Supports deployment to:
- Render (backend)
- Vercel (frontend)
- Docker/Docker Compose
- AWS EC2
- Any Node.js hosting

All free tier options included.

--- a/spur-ai-chat/.gitignore
+++ b/spur-ai-chat/.gitignore
@@ -1,11 +1,83 @@
+# Dependencies
 node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# Production builds
 dist/
 build/
 .svelte-kit/
+frontend/build/
+backend/dist/
+
+# Environment variables (NEVER commit these)
 .env
 .env.local
-.DS_Store
-*.log
-coverage/
+.env.*.local
+.env.production.local
+
+# IDE & Editor files
 .vscode/
 .idea/
+*.swp
+*.swo
+*.swn
+*~
+.DS_Store
+.AppleDouble
+.LSOverride
+*.sublime-workspace
+
+# OS files
+Thumbs.db
+.DS_Store
+
+# Logs
+logs/
+*.log
+*.log.*
+
+# Test coverage
+coverage/
+.nyc_output/
+
+# Database files (local only)
+*.db
+*.db-shm
+*.db-wal
+!spur_chat.db.example
+
+# Temporary files
+tmp/
+temp/
+.cache/
+
+# Docker
+.docker/
+
+# IDE
+.env.example.backup
+
+# Development
+.vite/
+.parcel-cache/
+
+# Backend specific
+backend/node_modules/
+backend/dist/
+backend/.env
+
+# Frontend specific
+frontend/node_modules/
+frontend/build/
+frontend/.env
+
+# OS
+.DS_Store
+Thumbs.db
