--- a/spur-ai-chat/backend/.env.example
+++ b/spur-ai-chat/backend/.env.example
@@ -1,23 +1,31 @@
+# Backend Environment Variables Template
+# Copy to .env and fill in actual values
+
 # Server Configuration
 PORT=3000
 NODE_ENV=development
 
-# Database Configuration
-DATABASE_URL=postgresql://user:password@localhost:5432/spur_chat
-# Or use individual params:
-# DB_HOST=localhost
-# DB_PORT=5432
-# DB_NAME=spur_chat
-# DB_USER=your_user
-# DB_PASSWORD=your_password
+# Database
+# For development: sqlite (default)
+DATABASE_URL=sqlite:./spur_chat.db
 
-# OpenAI Configuration
-OPENAI_API_KEY=sk-your-openai-api-key-here
-OPENAI_MODEL=gpt-3.5-turbo
+# For production: PostgreSQL (optional)
+# DATABASE_URL=postgresql://user:password@host:5432/spur_chat
 
-# CORS Configuration (optional)
+# LLM Configuration - Ollama (Free & Local)
+OLLAMA_URL=http://localhost:11434
+LLM_MODEL=mistral
+
+# Alternative: Use OpenAI instead of Ollama
+# OPENAI_API_KEY=sk-your-key-here
+# USE_OPENAI=true
+
+# CORS Configuration (for frontend URL)
 CORS_ORIGIN=http://localhost:5173
 
-# Rate Limiting (optional)
-MAX_MESSAGE_LENGTH=2000
-MAX_TOKENS=500
+# Production CORS Example
+# CORS_ORIGIN=https://your-frontend.vercel.app
+
+# Optional: Rate limiting
+RATE_LIMIT_WINDOW_MS=15000
+RATE_LIMIT_MAX_REQUESTS=100
