--- a/spur-ai-chat/frontend/.env.example
+++ b/spur-ai-chat/frontend/.env.example
@@ -1,1 +1,11 @@
-VITE_API_URL=http://localhost:3000
+# Frontend Environment Variables Template
+# Copy to .env and fill in actual values
+
+# API Base URL - where your backend is running
+VITE_API_BASE_URL=http://localhost:3000
+
+# Production
+# VITE_API_BASE_URL=https://your-backend.onrender.com
+
+# Development logging
+VITE_DEBUG=false
